--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
+<head>
 <style>
   .container {
     width: 800px;
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-size: 1rem;
   }
 
@@ -22,32 +21,35 @@
 
   a {
     margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
     text-decoration: none;
+    text-align: center;
     color: white;
     font-weight: 600;
     font-size: 1rem;
-    width: 260px;
-    height: 56px;
-    background: linear-gradient(215.11deg, #DF072B 11.63%, #DC1637 81.82%);
+    padding: 1rem 2rem;
+    background: #DF072B;
     border-radius: 16px;
   }
 
 </style>
+</head>
+<body>
+  <div class="container">
+    <span>Olá, {{ name }} </span>
+    <p>Você solicitou uma alteração de senha.</p>
+      Para realizar a troca, clique no link
+      <br />
+      <a href={{ link }}>Alterar senha</a>
+    </p>
 
-<div class="container">
-  <span>Olá, {{ name }} </span>
-  <p>Você solicitou uma alteração de senha.</p>
-    Para realizar a troca, clique no link
-    <br />
-    <a href={{ link }}>Alterar senha</a>
-  </p>
+    <p>Caso não tenha sido você quem solicitou a alteração da senha, basta ignorar este e-mail.</p>
 
-  <p>Caso não tenha sido você quem solicitou a alteração da senha, basta ignorar este e-mail.</p>
+    <strong>Obrigado!</strong>
 
-  <strong>Obrigado!</strong>
+    <h3>Equipe | <strong>AndreJR</strong></h3>
+  </div>
+</body>
+</html>
 
-  <h3>Equipe | <strong>AndreJR</strong></h3>
-</div>
+
